--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Advanced File Upload</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+</head>
+<body>
+  <div class="container">
+    <h1>Upload Your File</h1>
+    <div class="upload-container">
+      <div id="upload-area" class="upload-area">
+        <p>Drag & Drop your file here</p>
+        <button class="browse-btn">Browse Files</button>
+        <input type="file" id="file-input" class="file-input" />
+      </div>
+      <div id="progress-container" class="progress-container">
+        <div id="progress-bar" class="progress-bar"></div>
+        <p id="progress-text">0%</p>
+      </div>
+      <div id="file-url-container" class="file-url-container">
+        <p>File URL:</p>
+        <a id="file-url" href="#" target="_blank"></a>
+      </div>
+    </div>
+  </div>
 
+  <script src="script.js"></script>
+</body>
+</html>
